<resources>
    <string name="app_name">Mellow Days</string>
    <string name="slogan">Relax and Enjoy Studying</string>
    <string name="signIn">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="newUserReg">New User? REGISTER</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="logout">Log Out</string>

    <string name="signUpMsg">Sign Up, Spread Wisdom.</string>
    <string name="signUp">Sign Up</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="haveAccLogin">Already have an account? LogIn.</string>

    <string name="givenFullname">Melike Mellow</string>
    <string name="givenUsername">melikemellow</string>
    <string name="givenEmail">melike@gmail.com</string>
    <string name="givenPassword">123456mellow*</string>

    <string name="update">UPDATE</string>

    <!--ON BOARDING STRINGS-->
    <!--Titles-->
    <string name="first_slide_title">Add your courses!</string>
    <string name="second_slide_title">Predict your GPA!</string>
    <string name="third_slide_title">Never miss a due date!</string>
    <string name="fourth_slide_title">Relax and enjoy studying!</string>

    <!--Descriptions-->
    <string name="first_slide_descr">You can add any courses to any semester and add the assignments with their weights.</string>
    <string name="second_slide_descr">You can use our default letter grades or you can add yourself for each course.</string>
    <string name="third_slide_descr">You can add upcoming assignments and see them on your weekly planner.</string>
    <string name="fourth_slide_descr">No need to worry about your academic life since you can foresee how well you are handling. Organize your thought and</string>

    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start_button">Let\'s Get Started!</string>


    <string name="dashboard">DASHBOARD</string>
    <string name="prev_semesters">Semesters</string>
    <string name="courses">Courses</string>
    <string name="schedule">Schedule</string>
    <string name="assignments">Assigments</string>
    <string name="search">Search for courses...</string>
    <string name="viewAll">View All</string>

    <!--Dashboard Titles-->
    <string name="upcoming_title">Upcoming Assignments</string>
    <string name="curr_courses_title">Current Semester Courses</string>
    <string name="prev_sem_title">Previous Semesters</string>


    <!--Dashboard Descriptions-->
    <string name="upcoming_descr">This week you have these assignments</string>
    <!--  <string name="curr_courses_descr">Click on a course to manage.</string>
    <string name="prev_sem_descrip">Click on a semester to manage.</string>-->

    <string name="description">Assignment Description</string>
    <string name="progress">Progress</string>
    <string name="currentGrade">Current Grade: </string>


    <!-- Menu -->
    <string name="home">Home</string>
    <string name="gpa_calc">GPA Calculator</string>
    <string name="nav_search">Search</string>
    <string name="profile">Profile</string>

    <!-- Assignment Form -->
    <string name="new_ass">New Assignment</string>
    <string name="ass_title">Title</string>
    <string name="ass_title_hint">Name your task</string>
    <string name="ass_descr">Description</string>
    <string name="ass_descr_hint">Detail your task</string>
    <string name="ass_due_date">Due Date</string>
    <string name="approve_new_ass">Create new assignment</string>
    <string name="cancel">Cancel</string>
    <string name="edit_ass">Edit Assignment</string>
    <string name="delete">Delete</string>
    <string name="enter_due_date">Click to enter a due date</string>


</resources>
