<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>
         <item android:id="@+id/nav_search"
             android:title="@string/nav_search"
             android:icon="@drawable/search_icon"/>
         <item android:id="@+id/nav_gpa_cal"
             android:title="@string/gpa_calc"
             android:icon="@drawable/calculate_icon"/>

     </group>

    <item android:title="@string/profile">
        <menu>

            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/person_icon"/>
                <item android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/exit_icon"/>


            </group>

        </menu>
    </item>


</menu>