<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <ImageView
            android:id="@+id/registerHare"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:transitionName="logo_image"
            android:src="@drawable/medium_hare_moongazer_31cm_1000x1000"/>

        <TextView
            android:id="@+id/registerTextMellow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:transitionName="logo_text"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:fontFamily="@font/economica"/>
    </LinearLayout>

    <TextView
        android:id="@+id/registerSignText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpMsg"
        android:transitionName="logo_descr"
        android:fontFamily="@font/antic"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerLayoutFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/fullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerFullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/username"
            android:transitionName="trans_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerUsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:transitionName="trans_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/regSignUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/backgroundYellow"
        android:fontFamily="@font/economica"
        android:onClick="registerUser"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:transitionName="trans_go_btn" />

    <Button
        android:id="@+id/regLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparentWhite"
        android:text="@string/haveAccLogin"
        android:transitionName="trans_reglog_btn"
        android:fontFamily="@font/antic"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:elevation="0dp"/>

</LinearLayout>