<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_ass_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_background"
    android:elevation="10dp"
    android:excludeFromRecents="true"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@android:style/Theme.Dialog"
    tools:context=".AssignmentCardDetails">

    <LinearLayout
        android:id="@+id/new_ass_edit_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/economica"
            android:text="@string/edit_ass"
            android:textColor="@color/japanese_indigo"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/ass_edit_add_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic"
                android:text="@string/ass_title"
                android:textColor="@color/japanese_indigo"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ass_edit_title_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparentWhite"
                android:elevation="4dp"
                app:counterMaxLength="15"
                app:counterEnabled="true"
                android:hint="@string/ass_title_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ass_edit_title_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="15"
                    android:elevation="20dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ass_edit_add_descr_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/ass_edit_add_title_layout"
            app:layout_constraintTop_toBottomOf="@id/ass_edit_add_title_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic"
                android:text="@string/ass_descr"
                android:textColor="@color/japanese_indigo"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ass_edit_descr_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparentWhite"
                android:elevation="4dp"
                app:counterMaxLength="50"
                app:errorEnabled="true"
                app:counterEnabled="true"
                android:hint="@string/ass_descr_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ass_edit_descr_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    android:maxLength="50"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ass_edit_add_due_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/ass_edit_add_descr_layout"
            app:layout_constraintTop_toBottomOf="@id/ass_edit_add_descr_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic"
                android:text="@string/ass_due_date"
                android:textColor="@color/japanese_indigo"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ass_edit_form_date_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparentWhite"
                    android:checked="true"
                    android:fontFamily="@font/antic"
                    android:gravity="left"
                    android:text="@string/enter_due_date"
                    android:textColor="@color/japanese_indigo"
                    app:strokeWidth="1dp"></TextView>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_ass_edit_content">

        <Button
            android:id="@+id/ass_edit_update_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/approve_btn"
            android:elevation="4dp"
            android:fontFamily="@font/antic"
            android:text="@string/update"
            android:textColor="@color/japanese_indigo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ass_edit_delete_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/cancel_btn"
            android:elevation="4dp"
            android:fontFamily="@font/antic"
            android:onClick="deleteAssignment"
            android:text="@string/delete"
            android:textColor="@color/japanese_indigo"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>